--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,7 @@ span {
 .home-page-container {
   display: flex;
   width: 100%;
+  margin-bottom: 10rem;
 }
 
 .main-container {
@@ -42,13 +43,6 @@ span {
 
   height: 100vh;
   width: 65%;
-}
-
-.climate-indicators-container {
-  display: flex;
-  width: 35%;
-  flex-direction: column;
-  background-color: green;
 }
 
 /*header*/
@@ -163,7 +157,7 @@ select {
   width: 38rem;
   background-color: #f5f5f5;
   border-radius: 5px;
-  box-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.075);
+  box-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.048);
   margin-bottom: 1.7rem;
 }
 
@@ -208,10 +202,112 @@ select {
 }
 
 /*Status bar*/
-.status-bar {
-  width: 100%;
+.status-bar-title {
   text-align: center;
-  margin-top: 1rem;
-  font-size: 1.5rem;
+  font-size: 2.4rem;
   color: #828282;
+  margin: 1.5rem 0;
+}
+
+.bar-background {
+  height: 2rem;
+  width: 100%;
+  background-color: #d4d4d4;
+  border-radius: 1rem;
+}
+
+.bar-progress {
+  height: 2rem;
+  width: 50%;
+  background-color: #33bf18;
+  border-radius: 1rem;
+}
+
+.status-system-text {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 1rem;
+}
+
+.text-status {
+  font-size: 2rem;
+  color: #828282;
+}
+
+/*Climate Indicators*/
+
+.climate-indicators-container {
+  display: flex;
+  align-items: center;
+  width: 35%;
+  flex-direction: column;
+  background-color: #1f3a6c;
+}
+
+.content-indicatos {
+  display: flex;
+  flex-direction: column;
+  width: 85%;
+}
+
+.h2-indicator-climate-title {
+  font-size: 3.3rem;
+  text-align: center;
+  color: white;
+  margin-top: 2rem;
+}
+
+.room-hour {
+  display: flex;
+  justify-content: space-between;
+  font-size: 2.3rem;
+  color: #fbfbfd;
+}
+
+.room {
+  font-weight: 100;
+}
+
+.hour {
+  font-weight: 500;
+}
+
+.status-climate_indicator {
+  display: flex;
+  align-items: center;
+  margin-top: 2.5rem;
+}
+
+.climate_indicator_icon {
+  width: 10rem;
+  height: auto;
+}
+
+.status-text {
+  font-size: 4rem;
+  font-weight: 600;
+  color: white;
+  margin-left: 2rem;
+}
+
+.line-white{
+  background-color: rgba(255, 255, 255, 0.466);
+  margin: 4rem 0;
+}
+
+.indicator-metric{
+  display: flex;
+  justify-content: space-between;
+  font-size: 2.3rem;
+  color: white;
+}
+
+.bar-metric{
+  height: 1rem;
+  margin-bottom: 2rem;
+}
+
+.bar-progress-metric{
+  height: 1rem;
+  background-color: #6E85BF;
 }
