--- a/src/style.css
+++ b/src/style.css
@@ -40,7 +40,6 @@ span {
   display: flex;
   flex-direction: column;
   align-items: center;
-
   height: 100vh;
   width: 65%;
 }
@@ -159,6 +158,9 @@ select {
   border-radius: 5px;
   box-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.048);
   margin-bottom: 1.7rem;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgba(0, 0, 0, 0.021);
 }
 
 .card img {
@@ -237,11 +239,14 @@ select {
 /*Climate Indicators*/
 
 .climate-indicators-container {
+  position: fixed;
   display: flex;
   align-items: center;
   width: 35%;
+  height: 100%;
   flex-direction: column;
   background-color: #1f3a6c;
+  margin-left: 65%;
 }
 
 .content-indicatos {
@@ -290,24 +295,24 @@ select {
   margin-left: 2rem;
 }
 
-.line-white{
+.line-white {
   background-color: rgba(255, 255, 255, 0.466);
   margin: 4rem 0;
 }
 
-.indicator-metric{
+.indicator-metric {
   display: flex;
   justify-content: space-between;
   font-size: 2.3rem;
   color: white;
 }
 
-.bar-metric{
+.bar-metric {
   height: 1rem;
   margin-bottom: 2rem;
 }
 
-.bar-progress-metric{
+.bar-progress-metric {
   height: 1rem;
-  background-color: #6E85BF;
+  background-color: #6e85bf;
 }
