--- a/src/style.css
+++ b/src/style.css
@@ -339,4 +339,168 @@ select {
   margin-top: 2rem;
 }
 
+/*LOGIN*/
+.login-background {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgb(72, 90, 164);
+  background: linear-gradient(
+    90deg,
+    rgba(72, 90, 164, 1) 0%,
+    rgba(91, 116, 220, 1) 75%
+  );
+  min-height: 100vh;
+  width: 100%;
+}
 
+.login-container {
+  display: flex;
+  border-radius: 1.05rem;
+  background-color: white;
+  height: 42rem;
+  width: 73.5rem;
+  margin-left: 19rem;
+  box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.116);
+}
+
+.form-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 45.15%;
+}
+
+.internal-form-container {
+  display: flex;
+  flex-direction: column;
+  height: 89.25%;
+  width: 84%;
+}
+
+.internal-form-container img {
+  width: 2.625rem;
+  height: auto;
+  margin-right: 0.525rem;
+}
+
+.img-epam-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.3rem;
+  color: #2b2a2c;
+}
+
+.h1-title-login {
+  color: #2b2a2c;
+  text-align: center;
+  font-size: 3.15rem;
+  margin-top: 2.1rem;
+}
+.line-text-line {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.line-text {
+  width: 28.35%;
+  background-color: rgba(0, 0, 0, 0.178);
+  height: 2px;
+}
+
+.text-between-lines {
+  font-size: 1.26rem;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  font-size: 1.26rem;
+  font-weight: 700;
+  margin-top: 2.1rem;
+}
+
+input {
+  border: none;
+  height: 3.3rem;
+  outline: none;
+  text-indent: 1.05rem;
+  border-radius: 2.1px;
+}
+
+input[type='text'] {
+  background-color: #ebeefd;
+}
+
+input[type='submit'] {
+  height: 3.3rem;
+  margin-top: 2.1rem;
+  color: white;
+  background-color: #677ee1;
+  font-weight: 700;
+}
+
+input[type='submit']:hover {
+  background-color: #5970d4;
+  cursor: pointer;
+}
+input[type='submit']:active {
+  background-color: #4f66cc;
+}
+
+.image-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 59.85%;
+  background-color: #ebeefd;
+  border-top-right-radius: 1.05rem;
+  border-bottom-right-radius: 1.05rem;
+}
+
+.login-image {
+  width: 90%;
+  height: auto;
+  margin-left: 4rem;
+  padding-right: 2rem;
+}
+
+.temp-icon-login {
+  width: 3.5rem;
+  height: 3.5rem;
+  margin-right: 1rem;
+}
+
+.description-app {
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  right: 40rem;
+  bottom: 15rem;
+}
+
+.h3-description {
+  font-size: 2rem;
+  line-height: 2rem;
+}
+
+.icon-title-description {
+  display: flex;
+  align-items: center;
+}
+
+.description {
+  font-size: 1.3rem;
+  line-height: 1.5rem;
+  margin-top: 0.8rem;
+  margin-left: 4.7rem;
+}
