--- a/src/style.css
+++ b/src/style.css
@@ -207,7 +207,21 @@ select {
   width: 2.3rem;
   height: 2.3rem;
   border-radius: 100%;
-  background-color: rgb(15, 196, 15);
+}
+
+.circle-status-red {
+  transition: 200;
+  background-color: red;
+}
+
+.circle-status-green {
+  transition: 200;
+  background-color: rgb(15, 179, 15);
+}
+
+.circle-status-orange {
+  transition: 200;
+  background-color: orange;
 }
 
 .span-simbol-data {
@@ -233,7 +247,6 @@ select {
 
 .bar-progress {
   height: 2rem;
-  width: 50%;
   background-color: #33bf18;
   border-radius: 1rem;
 }
