--- a/src/style.css
+++ b/src/style.css
@@ -249,6 +249,7 @@ select {
   height: 2rem;
   background-color: #33bf18;
   border-radius: 1rem;
+  transition: width 0.5s ease;
 }
 
 .status-system-text {
